--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 /*CSS RESET*/
 html, body, div, span, applet, object, iframe,  
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,  
@@ -125,12 +126,86 @@ button:hover{
     justify-content: space-around;
     width:80%;
     margin:0 auto;
+    
 }
 
 .artist{
     width:40%;
     text-align:center;
+    
 }
 .artist img{
     width:100%;
 }
+.bio{
+    
+    font-family: 'Raleway', sans-serif;
+    height: 75vh;
+    text-align: fit-content;
+
+}
+/*media queries*/
+/*for mobile phones*/
+
+@media(max-width:500px){
+    nav{
+        width:30%;
+        display:flex;
+        justify-content:space-evenly;
+        margin-top:5%;
+        padding: 2%;
+        padding: 4px;
+    }
+    nav a{
+        color:#626262;
+        padding: 4px;
+    }
+    nav span{
+        border-left:3px solid #626262;
+        padding:4px;
+    }    
+    .artists-container{
+        display:flex;
+        flex-direction: column;
+        width:80%;
+        margin:0 auto;
+
+    }
+    
+    .artist{
+        width:90%;
+        text-align:center;
+        
+        margin-left: 4%;
+    }
+    .artist img{
+        width:100%;
+    }
+    .title-container div {	
+     		
+        background-position: center;	
+        color: white;	
+        width: fit-content;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 500px;
+       
+      
+        
+    }	
+    button{
+        padding:4% 5%;
+        font-size: 1.7rem;
+        border-radius:6px;
+        border:2px solid #626262;
+        box-shadow: 2px 2px 1px #626262;
+        transition: 2s;
+    }
+    img{
+        border:2px solid black;
+        height: 40vh;
+    }
+} 
+
